--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "nodemon": "^2.0.19"
+    "morgan": "^1.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
