--- a/package.json
+++ b/package.json
@@ -15,15 +15,6 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "nodemon": "^2.0.19",
-    "prettier": "^1.17.0"
+    "nodemon": "^2.0.19"
   }
 }
