--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=tung
-PASSWORD=123456
+DATABASE=mongodb+srv://ductung:<PASSWORD>@cluster0.trxhcac.mongodb.net/natours
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=lVdDWVFJz1eLHGvz
