--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-PORT=8080
-DATABASE=mongodb+srv://ductung:<PASSWORD>@cluster0.trxhcac.mongodb.net/natours
+PORT=3000
+DATABASE=mongodb+srv://tung:<PASSWORD>@cluster0.trxhcac.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=lVdDWVFJz1eLHGvz
+DATABASE_PASSWORD =tung
