--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "natours",
   "version": "1.0.0",
-  "description": "",
+  "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "set NODE_ENV=production & nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,6 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.20"
   }
 }
