--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "mongoose": "^5.13.15",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "slugify": "^1.3.4",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
